tests/baselines/reference/parserStrictMode4.errors.txt
parserStrictMode4.ts(2,1): error TS1100: Invalid use of 'arguments' in strict mode.
parserStrictMode4.ts(2,1): error TS2304: Cannot find name 'arguments'.


==== parserStrictMode4.ts (2 errors) ====
    "use strict";
    arguments = 1;
    ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    ~~~~~~~~~
!!! error TS2304: Cannot find name 'arguments'.